CHG: AlphaCullEnabled behavior in ZERNFixedMaterial.hlsl when Opacity Map is available or not, has been changed to support the Alpha channel of Base Map. CHG: In ZEDEditor, classes are now being registered automatically instead of manual registration. FIX: Minor fixes in ZEDEditor. CHG: In ZECamera, API architecture regarding AspectRatio, HorizontalFOV, VerticalFOV values have been improved. FIX: Minor fixes in ZESoundModule, ZERNMultiplexerMaterial, ZEInterior, ZEInteriorResource classes.
svn path=/trunk/; revision=2236

--- a/Source/ZEDEditor/CMakeLists.txt
+++ b/Source/ZEDEditor/CMakeLists.txt
@@ -55,4 +55,4 @@ ze_add_executable(TARGET ZEDEditor
 
 qt5_use_modules(ZEDEditor Widgets)
 
-ze_meta_register(LIBS ZEDCore ZEDUserInterface ZEDSceneEditor ZETrainIGModule HavalsanCombatModule)
+ze_meta_register(LIBS ZEDCore ZEDUserInterface ZEDEntityEditor ZETrainIGModule HavalsanCombatModule)
