--- a/Source/ZEDEditor/ZEDEntityEditor/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDEntityEditor/CMakeLists.txt
@@ -41,6 +41,8 @@ ze_add_source(ZEDSceneWrapper.cpp						Sources)
 ze_add_source(ZEDSceneWrapper.h							Sources ZEMC)
 ze_add_source(ZEDEntityWrapper.cpp						Sources)
 ze_add_source(ZEDEntityWrapper.h						Sources ZEMC)
+ze_add_source(ZEDSectorWrapper.cpp						Sources)
+ze_add_source(ZEDSectorWrapper.h						Sources ZEMC)
 
 ze_add_source(ZEDMaterialAsset.cpp						Sources)
 ze_add_source(ZEDMaterialAsset.h						Sources)
@@ -58,6 +60,10 @@ ze_add_source(ZEDSceneAsset.cpp							Sources)
 ze_add_source(ZEDSceneAsset.h							Sources)
 ze_add_source(ZEDSceneAssetType.cpp						Sources)
 ze_add_source(ZEDSceneAssetType.h						Sources ZEMC)
+ze_add_source(ZEDSectorAsset.cpp						Sources)
+ze_add_source(ZEDSectorAsset.h							Sources)
+ze_add_source(ZEDSectorAssetType.cpp					Sources)
+ze_add_source(ZEDSectorAssetType.h						Sources ZEMC)
 ze_add_source(ZEDSoundAsset.cpp							Sources)
 ze_add_source(ZEDSoundAsset.h							Sources)
 ze_add_source(ZEDSoundAssetType.cpp						Sources)
