--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -49,6 +49,8 @@ ze_add_source(ZEVolumeCast.cpp			Sources)
 ze_add_source(ZEVolumeCast.h			Sources Headers)
 ze_add_source(ZEScene.cpp				Sources)
 ze_add_source(ZEScene.h					Sources Headers ZEMC)
+ze_add_source(ZESea.cpp					Sources)
+ze_add_source(ZESea.h					Sources Headers ZEMC)
 ze_add_source(ZEGeographicEntity.cpp	Sources)
 ze_add_source(ZEGeographicEntity.h		Sources Headers ZEMC)
 ze_add_source(ZESector.cpp				Sources)
