FIX: ZEString conversion operator bugs have been fixed. FIX: Many improvements and fixes have been made on HavelsanCombat. (STILL IN PROGRESS) ADD: Additive transparency support has been added to ZERNStandardMaterial. ADD: Additive transparency support has been added to ZERNParticleMaterial. ADD: ZESpawner, which spawns and de-spawns entities, has been added. ADD: New entity search functions ZEEntity::GetEntity, ZEEntity::GetEntities, ZEEntity::GetComponent and ZEEntity::GetComponents have been added to ZEEntity.
svn path=/trunk/; revision=2241

--- a/Source/ZEFoundation/ZEStateMachine/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEStateMachine/CMakeLists.txt
@@ -35,12 +35,15 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-ze_add_source(ZEState.cpp				Sources)
-ze_add_source(ZEState.h					Sources Headers)
-ze_add_source(ZEStateMachine.cpp		Sources)
-ze_add_source(ZEStateMachine.h			Sources Headers)
+ze_add_source(ZEState.cpp						Sources)
+ze_add_source(ZEState.h							Sources Headers ZEMC)
+ze_add_source(ZEStateTransition.cpp				Sources)
+ze_add_source(ZEStateTransition.h				Sources Headers ZEMC)
+ze_add_source(ZEStateMachine.cpp				Sources)
+ze_add_source(ZEStateMachine.h					Sources Headers ZEMC)
 
 ze_add_library(TARGET ZEStateMachine
 	SOURCES ${Sources} 
 	HEADERS ${Headers}
+	ZEMC ${ZEMC}
 	LIBS ZEDS)
