ADD: Support for OpenVR has been added to HavelsanCombat. FIX: ZERNStageInputTexture has been implemented. FIX: ZETimer destroy clean up bug has been fixed. ADD: Double shadow map regeneration problem on stereo display has been fixed. FIX: Sub classed resource sharing problem has been fixed. CHG: ZESoundSource3D capabilities has been moved to ZESoundSource. REM: ZESoundSource3D has been removed. REM: ZEDirectSound mouse has been removed. MOD: ZESound subsytem has been revised and improved.
svn path=/trunk/; revision=2248

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -6,15 +6,15 @@ LogFileMinimumLevel = Debug
 
 [Sound]
 DeviceId = 0
-StreamingDisabled = false
+StreamingDisabled = true
 MaxBufferSize = 2000
-MasterVolume = 100
+MasterVolume = 1.000000
 SpeakerLayout = 1
-EffectVolume = 100
-DialogVolume = 100
-MusicVolume = 100
-VideoVolume = 100
-PlayerCommVolume = 100
+EffectVolume = 1.000000
+DialogVolume = 1.000000
+MusicVolume = 1.000000
+VideoVolume = 1.000000
+PlayerCommVolume = 100.000000
 
 [ZECore]
 ZEGRGraphicsModule = ZED11Module
