IMP: Image filtering api has been implemented. ADD: ZERNFilteringCommon.hlsl has been added. CHG: ZERNHDR.hlsl has been revised. IMP: Post effects have been implemented on TPSModule. CHG: Render stage of ZEATFog has been changed from post-process to atmosphere. ADD: ZERNFilterCommon has been added to ZERNRenderer module. CHG: ZERNStageAtmosphere has been revised. CHG: ZERNStageHDR has been revised. IMP: ZERNStagePostProcess has been implemented for managing and applying image filters.
svn path=/trunk/; revision=2249

--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -49,7 +49,9 @@ ze_add_source(ZERNView.h							Sources Headers ZEMC)
 ze_add_source(ZERNRenderParameters.cpp				Sources)
 ze_add_source(ZERNRenderParameters.h				Sources Headers ZEMC)
 ze_add_source(ZERNFilter.cpp						Sources)
-ze_add_source(ZERNFilter.h							Sources Headers)
+ze_add_source(ZERNFilter.h							Sources Headers ZEMC)
+ze_add_source(ZERNFilterCommon.cpp					Sources)
+ze_add_source(ZERNFilterCommon.h					Sources Headers)
 ze_add_source(ZERNScreenUtilities.h 				Sources Headers ZEMC)
 ze_add_source(ZERNScreenUtilities.cpp				Sources)
 
