FIX: Fog issue for transparent objects has been fixed. FIX: Some fixes have been done on ZETrainIG module. FIX: Coinitialize issue has been fixed. FIX: Creating temp textures continously has been fixed. FIX: CustHcombat module has been renamed on ZEDEditor module. FIX: Minor fix has been made on ZERNRenderer.
svn path=/trunk/; revision=2264

--- a/Source/ZEDEditor/CMakeLists.txt
+++ b/Source/ZEDEditor/CMakeLists.txt
@@ -51,8 +51,8 @@ ze_add_source(ZEDMain.cpp		Sources)
 
 ze_add_executable(TARGET ZEDEditor 
 	SOURCES ${Sources}
-	LIBS ZEEngine ZEDEntityEditor ZETrainIGModule CustHCombatModule)
+	LIBS ZEEngine ZEDEntityEditor ZETrainIGModule ZinekIG-CombatVR-Module)
 
 qt5_use_modules(ZEDEditor Widgets)
 
-ze_meta_register(LIBS ZEDCore ZEDUserInterface ZEDEntityEditor ZETrainIGModule CustHCombatModule)
+ze_meta_register(LIBS ZEDCore ZEDUserInterface ZEDEntityEditor ZETrainIGModule ZinekIG-CombatVR-Module)
