CHG: In ZETrainIG project, message.h has been updated as new A.I. functionality interface design changed by customer. CHG: In ZETrainIG project, ZETICallbackImplementations and ZETICommunicationManager classes have been updated according to new message.h. FIX: ZELog::LogInternal function has been fixed.
svn path=/trunk/; revision=2269

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -1,12 +1,12 @@
 [Error]
 MinimumLevel = Debug
 LogFileEnabled = true
-LogFilePath = #S:/Logs/ZinekIG-{1}-{0}.log
+LogFilePath = #S:/Logs/ZinekEngine-{0}.log
 LogFileMinimumLevel = Debug
 
 [Sound]
 DeviceId = 0
-StreamingDisabled = true
+StreamingDisabled = false
 MaxBufferSize = 2000
 MasterVolume = 1.000000
 SpeakerLayout = 1
@@ -14,7 +14,7 @@ EffectVolume = 1.000000
 DialogVolume = 1.000000
 MusicVolume = 1.000000
 VideoVolume = 1.000000
-PlayerCommVolume = 100.000000
+PlayerCommVolume = 1.000000
 
 [ZECore]
 ZEGRGraphicsModule = ZED11Module
