CHG: ZEParticleModifier(s) have been divided into multiple header and source files.
svn path=/trunk/; revision=2276

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -1,6 +1,6 @@
 [Error]
 MinimumLevel = Debug
-LogFileEnabled = true
+LogFileEnabled = false
 LogFilePath = #S:/Logs/ZinekEngine-{0}.log
 LogFileMinimumLevel = Debug
 
