CHG: Lighting system has been revised. CHG: Shadow map generation and management have been implemented on stage shadowing. ADD: Spot light has been added. ADD: Shading class that contains common shading declareations have been added. FIX: Some minor bugs have been fixed.
svn path=/trunk/; revision=2294

--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -54,6 +54,8 @@ ze_add_source(ZERNFilterCommon.cpp					Sources)
 ze_add_source(ZERNFilterCommon.h					Sources Headers)
 ze_add_source(ZERNScreenUtilities.h 				Sources Headers ZEMC)
 ze_add_source(ZERNScreenUtilities.cpp				Sources)
+ze_add_source(ZERNShading.cpp 						Sources)
+ze_add_source(ZERNShading.h 						Sources Headers ZEMC)
 
 ze_add_source(ZELight.cpp 							Sources)
 ze_add_source(ZELight.h 							Sources Headers ZEMC)
@@ -65,6 +67,8 @@ ze_add_source(ZELightDirectional.cpp	 			Sources)
 ze_add_source(ZELightDirectional.h					Sources Headers ZEMC)
 ze_add_source(ZELightOmniProjective.cpp 			Sources)
 ze_add_source(ZELightOmniProjective.h 				Sources Headers ZEMC)
+ze_add_source(ZELightSpot.cpp 						Sources)
+ze_add_source(ZELightSpot.h 						Sources Headers ZEMC)
 
 ze_add_source(ZERNShaderSlots.cpp 					Sources)
 ze_add_source(ZERNShaderSlots.h 					Sources Headers)
