--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -44,7 +44,7 @@ ze_add_source(ZEEntityMacros.h			Sources Headers)
 ze_add_source(ZEPlayer.cpp				Sources)
 ze_add_source(ZEPlayer.h				Sources Headers ZEMC)
 ze_add_source(ZERayCast.cpp				Sources)
-ze_add_source(ZERayCast.h				Sources Headers)
+ze_add_source(ZERayCast.h				Sources Headers ZEMC)
 ze_add_source(ZEVolumeCast.cpp			Sources)
 ze_add_source(ZEVolumeCast.h			Sources Headers)
 ze_add_source(ZEScene.cpp				Sources)
