MOD: ZEVariant internal design has been changed in order to standardize and fortify type casting mechanisms. FIX: Many fixes have been made on ZEVariant.
svn path=/branches/v0.6.5-Meta/; revision=2310

--- a/Source/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEDS/CMakeLists.txt
@@ -111,6 +111,7 @@ ze_add_source(ZEValue.cpp						Sources)
 ze_add_source(ZEValue.h							Sources Headers)
 ze_add_source(ZEVariant.cpp						Sources)
 ze_add_source(ZEVariant.h						Sources Headers)
+ze_add_source(ZEVariantImp.h					Sources Headers)
 ze_add_source(ZEVariantTests.cpp				Tests)
 ze_add_source(ZEReference.h						Sources Headers)
 ze_add_source(ZEReference.cpp					Sources)
