!!! BROKEN BUILD !!! CHG: ZEMeta container names has been renamed to more correct word collection. CHG: ZEMTCollection has been redesigned from ground up to support a generic binary ABI. ADD: ZEClass has made const correct. ADD: Const object support has been added to ZEMeta and ZEClass. ADD: ZEArray has been integrated with ZEMTCollection. ADD: Flag checker functions has been added to ZEMTMethod and ZEMTProperty. FIX: ZEClass flags and flag checkers problems has been fixed. ADD: ZEMTType system has been transformed into generic type meta type (like ZEClass for object) for all primitive, fundamental, object and collection types. ADD: ZEMTType ABI has been introduced. CHG: ZEVariant has been modified to reflect new collection changes. REM: Template based ZEVariant setters and getters has been removed in favor of ABI based pointers. FIX: Many ZEMTTypeGenerator problems has been fixed by using C++ type traits library instead of custom trait class. ADD: ZEMTTypeGenerator has been modified to return undefined type when a non-meta capable type given. CHG: ZEMetaCompiler has been modified to reflect these new changes.
svn path=/branches/v0.6.5-Meta/; revision=2316

--- a/Source/ZEFoundation/ZEMeta/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEMeta/CMakeLists.txt
@@ -48,9 +48,8 @@ ze_add_source(ZEEvent.h								Sources Headers)
 ze_add_source(ZEEventImp.h							Sources Headers)
 ze_add_source(ZEEnumerator.cpp						Sources)
 ze_add_source(ZEEnumerator.h						Sources Headers)
-
-ze_add_source(ZEMTContainer.cpp						Sources)
-ze_add_source(ZEMTContainer.h						Sources Headers)
+ze_add_source(ZEMTCollection.cpp					Sources)
+ze_add_source(ZEMTCollection.h						Sources Headers)
 ze_add_source(ZEMTFundamental.cpp					Sources)
 ze_add_source(ZEMTFundamental.h						Sources Headers)
 ze_add_source(ZEMTDeclaration.cpp					Sources)
