MOD: ZEReferenceCounted has been modified to inherit from ZEObject in order fix multi-inheritance and forward-declaration issues in ZEMeta system. MOD: ZEMTType has been storage optimized in to 8 bytes in 64bit systems by using non-addressable unused bits in 64 bit pointers. FIX: Many fixes and improvements has been made on ZEMCMetaCompiler because of ZEMeta changes. FIX: ZEObject, ZEObject pointer and ZEObject holder support have been further improved on ZEVariant and ZEReference classes. FIX: ZETest framework has been maintained many bugs has been fixed and it's code has been revised.. FIX: ZETimeCounter has been maintained many bugs has been fixed and it's code has been revised. ADD: ZEMTTypeGenerator's automated unit tests have been added. ADD: New ZETerminalUtils class, which is used for coloring text terminal output, has been added. Default ZELog handler and ZETest framework migrated to ZETerminalUtils. ADD: Debug Optimized Code compiler switch has been added to MSVC tool-chain configuration in order to debug release builds properly.
svn path=/branches/v0.6.5-Meta/; revision=2322

--- a/Source/ZEFoundation/ZEMeta/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEMeta/CMakeLists.txt
@@ -75,6 +75,8 @@ ze_add_source(ZEMTType.cpp							Sources)
 ze_add_source(ZEMTType.h							Sources Headers)
 ze_add_source(ZEMTTypeGenerator.cpp					Sources)
 ze_add_source(ZEMTTypeGenerator.h					Sources Headers)
+ze_add_source(ZEMTTypeGeneratorTests.cpp			Tests)
+ze_add_source(ZEMTTypeTestTable.h					Sources)
 ze_add_source(ZEMTRegistar.cpp						Sources)
 ze_add_source(ZEMTRegistar.h						Sources Headers)
 ze_add_source(ZEMTModuleRegistar.cpp				Sources)
@@ -84,3 +86,8 @@ ze_add_library(TARGET ZEMeta
 	SOURCES ${Sources}
 	HEADERS ${Headers} 
 	LIBS ZEDS)
+	
+ze_add_test(TARGET ZEMetaTests
+	SOURCES ${Tests}
+	LIBS ZEFoundation
+	TEST_TARGET ZEMeta)
