--- a/Source/ZEFoundation/ZEPointer/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEPointer/CMakeLists.txt
@@ -49,13 +49,14 @@ ze_add_source(ZEWeakPointerTests.cpp	Tests)
 ze_add_source(ZEPointerTestClass.h		Tests)
 ze_add_source(ZEPointerTestClass.cpp	Tests)
 ze_add_source(ZEReferenceCounted.cpp	Sources)
-ze_add_source(ZEReferenceCounted.h		Sources Headers)
+ze_add_source(ZEReferenceCounted.h		Sources Headers ZEMC)
 ze_add_source(ZEHolder.cpp				Sources)
 ze_add_source(ZEHolder.h				Sources Headers)
 
 ze_add_library(TARGET ZEPointer 
 	SOURCES ${Sources} 
-	HEADERS ${Headers})
+	HEADERS ${Headers}
+	ZEMC ${ZEMC})
 	
 ze_add_test(TARGET ZEPointerTests 
 	SOURCES ${Tests}
