FIX: Fixed minor bugs in ZEVariant. ADD: ZEMTType::CopyConstructInstance and ZEMTType::AssignInstance have been implemented and fixes had made. FIX: Many problems detected by ZEVariantTest have been fixed. FIX: Ilvalid dynamic type cast crash in ZEMetaCompiler generated ZEClass::CopyConstruct and ZEClass::Assign code has been fixed. ADD: Cumulative test result reporting has been added to ZETestManager.
svn path=/branches/v0.6.5-Meta/; revision=2329

--- a/Source/ZEFoundation/ZEMeta/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEMeta/CMakeLists.txt
@@ -94,5 +94,6 @@ ze_add_library(TARGET ZEMeta
 	
 ze_add_test(TARGET ZEMetaTests
 	SOURCES ${Tests} ZEVariantTest.cpp
+	ZEMC ${ZEMC}
 	LIBS ZEFoundation
 	TEST_TARGET ZEMeta)
