ADD: Acquire, stopping event distribution to remaining event delegates, has been implemented. MOD: ZEMetaCompiler build scripts modified to output release builds to Tools folder.
svn path=/trunk/; revision=2333

--- a/Source/ZECodeUtilities/ZEMetaCompiler/CMakeLists.txt
+++ b/Source/ZECodeUtilities/ZEMetaCompiler/CMakeLists.txt
@@ -64,3 +64,5 @@ ze_add_executable(TARGET ZEMetaCompiler
 	CONSOLE 
 	SOURCES ${Sources}
 	LIBS ZEFoundationBase libClang)
+
+set_property(TARGET ZEMetaCompiler PROPERTY RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/Tool")
