ADD: New simplified AddDelegate syntax has been added to ZEEvent. ADD: ZEEventSuppressor class, which is used for stacking event suppression, has been added. MOD: ZESelectionManager events has been migrated to ZEEvent mechanism. MOD: ZEObjectManager events has been migrated to ZEEvent mechanism. MOD: ZEDViewport events has been migrated to ZEEvent mechanism. MOD: ZEDTransformManager evetns has been migrated to ZEEvent mechanism.
svn path=/trunk/; revision=2335

--- a/Source/ZEDEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDCore/CMakeLists.txt
@@ -55,8 +55,6 @@ ze_add_source(ZEDObjectWrapper.cpp						Sources)
 ze_add_source(ZEDObjectWrapper.h						Sources ZEMC)
 ze_add_source(ZEDObjectWrapper3D.cpp					Sources)
 ze_add_source(ZEDObjectWrapper3D.h						Sources ZEMC)
-ze_add_source(ZEDObjectEvent.cpp						Sources)
-ze_add_source(ZEDObjectEvent.h							Sources ZEMC)
 ze_add_source(ZEDObjectManager.cpp						Sources)
 ze_add_source(ZEDObjectManager.h						Sources ZEMC)
 
@@ -73,20 +71,17 @@ ze_add_source(ZEDPropertyOperation.h					Sources ZEMC)
 
 ze_add_source(ZEDTransformationManager.cpp				Sources)
 ze_add_source(ZEDTransformationManager.h				Sources ZEMC)
-ze_add_source(ZEDTransformationEvent.cpp				Sources)
-ze_add_source(ZEDTransformationEvent.h					Sources ZEMC)
 ze_add_source(ZEDTransformationOperation.cpp			Sources)
 ze_add_source(ZEDTransformationOperation.h				Sources ZEMC)
 
 ze_add_source(ZEDSelectionManager.cpp					Sources)
 ze_add_source(ZEDSelectionManager.h						Sources ZEMC)
-ze_add_source(ZEDSelectionEvent.cpp						Sources)
-ze_add_source(ZEDSelectionEvent.h						Sources ZEMC)
+
+ze_add_source(ZEDInputDefinitions.cpp					Sources)
+ze_add_source(ZEDInputDefinitions.h						Sources ZEMC)
 
 ze_add_source(ZEDViewport.cpp							Sources)
 ze_add_source(ZEDViewport.h								Sources QtMocs)
-ze_add_source(ZEDViewportEvent.cpp						Sources)
-ze_add_source(ZEDViewportEvent.h						Sources ZEMC)
 ze_add_source(ZEDViewportManager.cpp					Sources)
 ze_add_source(ZEDViewportManager.h						Sources ZEMC)
 ze_add_source(ZEDViewportController.cpp					Sources)
