--- a/Source/ZEFoundation/ZEMeta/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEMeta/CMakeLists.txt
@@ -46,6 +46,8 @@ ze_add_source(ZEEventDelegateImp.h					Sources Headers)
 ze_add_source(ZEEvent.cpp							Sources)
 ze_add_source(ZEEvent.h								Sources Headers)
 ze_add_source(ZEEventImp.h							Sources Headers)
+ze_add_source(ZEEventSuppressor.cpp					Sources)
+ze_add_source(ZEEventSuppressor.h					Sources Headers)
 ze_add_source(ZEEnumerator.cpp						Sources)
 ze_add_source(ZEEnumerator.h						Sources Headers)
 ze_add_source(ZEMTCollection.cpp					Sources)
