FIX: Fixed bug on ZEDPropertyEditor update routines. ADD: New options framework has been added to ZEDEditor. REM: ZEDCustomizeUIWindow has been transformed into ZEDMenuOptionsPage and ZEDToolbarOptionsPage. MOD: ZEDEditor delegate binding syntaxes has been migrated to new simplified one.
svn path=/trunk/; revision=2338

--- a/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
@@ -44,26 +44,31 @@ ze_add_source(ZEDUserInterfaceComponent.cpp				Sources)
 ze_add_source(ZEDUserInterfaceComponent.h				Sources ZEMC QtMOCs)
 ze_add_source(ZEDWindow.cpp								Sources)
 ze_add_source(ZEDWindow.h								Sources ZEMC QtMOCs)
+ze_add_source(ZEDMainWindow.cpp							Sources)
+ze_add_source(ZEDMainWindow.h							Sources QtMOCs)
+ze_add_source(ZEDMainWindow.ui							Sources QtUIs)
+ze_add_source(ZEDUIUtils.cpp							Sources)
+ze_add_source(ZEDUIUtils.h								Sources)
+
 ze_add_source(ZEDMenu.cpp								Sources)
 ze_add_source(ZEDMenu.h									Sources ZEMC)
 ze_add_source(ZEDMenuItem.cpp							Sources)
 ze_add_source(ZEDMenuItem.h								Sources ZEMC QtMOCs)
 ze_add_source(ZEDMenuManager.cpp						Sources)
 ze_add_source(ZEDMenuManager.h							Sources ZEMC)
+ze_add_source(ZEDMenuOptionsPage.cpp					Sources)
+ze_add_source(ZEDMenuOptionsPage.h						Sources QtMOCs)
+ze_add_source(ZEDMenuOptionsPageWidget.ui				Sources QtUIs)
+
 ze_add_source(ZEDToolbar.cpp							Sources)
 ze_add_source(ZEDToolbar.h								Sources ZEMC)
 ze_add_source(ZEDToolbarItem.cpp						Sources)
 ze_add_source(ZEDToolbarItem.h							Sources ZEMC QtMOCs)
 ze_add_source(ZEDToolbarManager.cpp						Sources)
 ze_add_source(ZEDToolbarManager.h						Sources ZEMC)
-ze_add_source(ZEDMainWindow.cpp							Sources)
-ze_add_source(ZEDMainWindow.h							Sources QtMOCs)
-ze_add_source(ZEDMainWindow.ui							Sources QtUIs)
-ze_add_source(ZEDCustomizeUIWindow.cpp					Sources)
-ze_add_source(ZEDCustomizeUIWindow.h					Sources QtMOCs)
-ze_add_source(ZEDCustomizeUIWindow.ui					Sources QtUIs)
-ze_add_source(ZEDUIUtils.cpp							Sources)
-ze_add_source(ZEDUIUtils.h								Sources)
+ze_add_source(ZEDToolbarOptionsPage.cpp					Sources)
+ze_add_source(ZEDToolbarOptionsPage.h					Sources QtMOCs)
+ze_add_source(ZEDToolbarOptionsPageWidget.ui			Sources QtUIs)
 
 ze_add_source(ZEDObjectModel.cpp						Sources)
 ze_add_source(ZEDObjectModel.h							Sources ZEMC)
@@ -107,6 +112,21 @@ ze_add_source(ZEDPropertyEditorItemVector.cpp			Sources)
 ze_add_source(ZEDPropertyEditorItemVector.h				Sources QtMOCs)
 ze_add_source(ZEDPropertyWindow.cpp						Sources)
 ze_add_source(ZEDPropertyWindow.h						Sources Headers QtMOCs)
+
+
+ze_add_source(ZEDOptionsPage.cpp						Sources)
+ze_add_source(ZEDOptionsPage.h							Sources ZEMC)
+ze_add_source(ZEDOptionsManager.cpp						Sources)
+ze_add_source(ZEDOptionsManager.h						Sources ZEMC)
+ze_add_source(ZEDOptionsWindow.cpp						Sources)
+ze_add_source(ZEDOptionsWindow.h						Sources Headers QtMOCs)
+ze_add_source(ZEDOptionsWindow.ui						Sources QtUIs)
+ze_add_source(ZEDOptionsWindowSingle.cpp				Sources)
+ze_add_source(ZEDOptionsWindowSingle.h					Sources Headers QtMOCs)
+ze_add_source(ZEDOptionsWindowSingle.ui					Sources QtUIs)
+ze_add_source(ZEDOptionsWindowMultiple.cpp				Sources)
+ze_add_source(ZEDOptionsWindowMultiple.h				Sources Headers QtMOCs)
+ze_add_source(ZEDOptionsWindowMultiple.ui				Sources QtUIs)
 
 ze_add_source(ZEDCommon.qrc								Sources QtResources)
 
