CHG: In ZETrainIG project, ZETICrowd test codes have been removed from ZETICallbackImplementations.cpp.
svn path=/trunk/; revision=2342

--- a/Source/ZEDEditor/CMakeLists.txt
+++ b/Source/ZEDEditor/CMakeLists.txt
@@ -51,8 +51,8 @@ ze_add_source(ZEDMain.cpp		Sources)
 
 ze_add_executable(TARGET ZEDEditor 
 	SOURCES ${Sources}
-	LIBS ZEEngine ZEDEntityEditor ZETrainIG-Module ZinekIG-CombatVR-Module)
+	LIBS ZEEngine ZEDEntityEditor ZETrainIG-Module)
 
 qt5_use_modules(ZEDEditor Widgets)
 
-ze_meta_register(LIBS ZEDCore ZEDUserInterface ZEDEntityEditor ZETrainIG-Module ZinekIG-CombatVR-Module)
+ze_meta_register(LIBS ZEDCore ZEDUserInterface ZEDEntityEditor ZETrainIG-Module)
