MOD: C++ expections has been disabled in CMake scripts. ADD: ZETimeManager, which manages frames and time, has been added. REM: ZERealTimeClock has been removed in favor of ZETimeCounter. ADD: Many deprecated functions and mechanisms have been removed from ZECore. MOD: ZEModule system has been revised Process dived into 3 different functions PreProces, Process and PostProcess. ADD: New LoadConfiguration and SaveConfiguration interface has been added to ZEModule. MOD: Module management code in ZECore have been rewritten. ADD: ZE_CORE_MODULE and ZECoreModules.h macros has been added.
svn path=/branches/v0.7.0-NewCore/; revision=2346

--- a/Source/ZEEngine/CMakeLists.txt
+++ b/Source/ZEEngine/CMakeLists.txt
@@ -59,11 +59,7 @@ add_subdirectory(ZEUI)
 #add_subdirectory(ZETerrain)
 add_subdirectory(ZEResource)
 
-ze_add_source(ZEAPI.h 						Sources Headers)
-ze_add_source(ZECompileOptions.h 			Sources Headers)
-ze_add_source(ZEDefinitions.h 				Sources Headers)
-ze_add_source(ZESDK.h 						Sources Headers)
-ze_add_source(ZESDK.cpp 					Sources)
+ze_add_source(ZEDummy.cpp				Sources)
 
 ze_add_library(TARGET ZEEngine 
 	SOURCES ${Sources}
