--- a/Source/ZEEngine/ZECore/CMakeLists.txt
+++ b/Source/ZEEngine/ZECore/CMakeLists.txt
@@ -48,7 +48,7 @@ ze_add_source(ZEConsole.h							Sources Headers)
 ze_add_source(ZEConsoleWindow.cpp					Sources)
 ze_add_source(ZEConsoleWindow.h						Sources Headers)
 ze_add_source(ZECore.cpp							Sources)
-ze_add_source(ZECore.h								Sources Headers)
+ze_add_source(ZECore.h								Sources Headers ZEMC)
 ze_add_source(ZEErrorManager.cpp					Sources)
 ze_add_source(ZEErrorManager.h						Sources Headers)
 ze_add_source(ZEModule.cpp							Sources)
@@ -63,8 +63,6 @@ ze_add_source(ZEProfiler.cpp						Sources)
 ze_add_source(ZEProfiler.h							Sources Headers)
 ze_add_source(ZEProfilerCounter.cpp					Sources)
 ze_add_source(ZEProfilerCounter.h					Sources Headers)
-ze_add_source(ZERealTimeClock.cpp					Sources)
-ze_add_source(ZERealTimeClock.h						Sources Headers)
 ze_add_source(ZEResource.cpp						Sources)
 ze_add_source(ZEResource.h							Sources Headers ZEMC)
 ze_add_source(ZEResourceManager.cpp					Sources)
@@ -75,12 +73,16 @@ ze_add_source(ZESystemMessageHandler.cpp			Sources)
 ze_add_source(ZESystemMessageHandler.h				Sources Headers)
 ze_add_source(ZEWindowResources.h					Sources)
 ze_add_source(ZETimer.cpp							Sources)
-ze_add_source(ZETimer.h								Sources Headers)
-ze_add_source(ZETimerManager.cpp					Sources)
-ze_add_source(ZETimerManager.h						Sources Headers)
+ze_add_source(ZETimer.h								Sources Headers ZEMC)
+ze_add_source(ZETimeManager.cpp						Sources)
+ze_add_source(ZETimeManager.h						Sources Headers ZEMC)
+ze_add_source(ZETimeParameters.cpp					Sources)
+ze_add_source(ZETimeParameters.h					Sources Headers ZEMC)
 ze_add_source(ZECrashHandler.cpp					Sources)
 ze_add_source(ZECrashHandler.h						Sources Headers)
 ze_add_source(ZECrashHandler_Windows.cpp			Sources PLATFORMS Windows)
+ze_add_source(ZESplashWindow.cpp					Sources)
+ze_add_source(ZESplashWindow.h						Sources)
 
 ze_add_library(TARGET ZECore
 	ZEMC ${ZEMC}
