--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -59,8 +59,8 @@ ze_add_source(ZESectorManager.cpp		Sources)
 ze_add_source(ZESectorManager.h			Sources Headers ZEMC)
 ze_add_source(ZESectorSelector.cpp		Sources)
 ze_add_source(ZESectorSelector.h		Sources Headers ZEMC)
-ze_add_source(ZEStateScreen.cpp			Sources)
-ze_add_source(ZEStateScreen.h			Sources Headers ZEMC)
+ze_add_source(ZELoadingScreen.cpp		Sources)
+ze_add_source(ZELoadingScreen.h			Sources Headers ZEMC)
 ze_add_source(ZESpawner.cpp				Sources)
 ze_add_source(ZESpawner.h				Sources Headers ZEMC)
 
