--- a/CMake/ze_version.rc.in
+++ b/CMake/ze_version.rc.in
@@ -1,8 +1,8 @@
 #include <windows.h>
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION		@ZEBUILD_VERSION_MAJOR@,@ZEBUILD_VERSION_MINOR@,@ZEBUILD_VERSION_INTERNAL@,@ZEBUILD_VERSION_REVISION@
-PRODUCTVERSION	@ZEBUILD_VERSION_MAJOR@,@ZEBUILD_VERSION_MINOR@,0,0
-FILEFLAGSMASK	0x3fL
+PRODUCTVERSION	@ZEBUILD_VERSION_MAJOR@,@ZEBUILD_VERSION_MINOR@,@ZEBUILD_VERSION_INTERNAL@,@ZEBUILD_VERSION_REVISION@
+FILEFLAGSMASK	VS_FFI_FILEFLAGSMASK
 #ifdef _DEBUG
 FILEFLAGS		VS_FF_DEBUG
 #else
@@ -21,7 +21,7 @@ BEGIN
 			VALUE "FileVersion", "@ZEBUILD_VERSION@"
 			VALUE "InternalName", "@PARAMETER_TARGET@"
 			VALUE "LegalCopyright", "Copyright (C) 2008-2017, Zinek Code House. All rights reserved."
-			VALUE "OriginalFilename", "@PARAMETER_TARGET@.@PARAMETER_EXTENSION@"
+			VALUE "OriginalFilename", "@PARAMETER_TARGET_FILENAME@"
 			VALUE "ProductName", "Zinek Engine"
 			VALUE "ProductVersion", "@ZEBUILD_VERSION_MAJOR@.@ZEBUILD_VERSION_MINOR@"
 		END
