--- a/Source/ZEEngine/ZECore/CMakeLists.txt
+++ b/Source/ZEEngine/ZECore/CMakeLists.txt
@@ -51,6 +51,8 @@ ze_add_source(ZECore.cpp							Sources)
 ze_add_source(ZECore.h								Sources Headers ZEMC)
 ze_add_source(ZEErrorManager.cpp					Sources)
 ze_add_source(ZEErrorManager.h						Sources Headers)
+ze_add_source(ZEPlugin.cpp							Sources)
+ze_add_source(ZEPlugin.h							Sources Headers)
 ze_add_source(ZEModule.cpp							Sources)
 ze_add_source(ZEModule.h							Sources Headers ZEMC)
 ze_add_source(ZEOption.cpp							Sources)
