--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -1,14 +1,26 @@
 [Error]
-MinimumLevel = Debug
-LogFileEnabled = false
+MinimumLevel = Info
+LogFileEnabled = true
 LogFilePath = #S:/Logs/ZinekEngine-{0}.log
-LogFileMinimumLevel = Debug
+LogFileMinimumLevel = Warning
 
 [ZECore]
 ZEGRGraphicsModule = ZED11Module
-ZEInputModule = ZEInputModule
-ZESoundModule = ZEALModule
+ZEInputModule = ZEWindowsInputModule
+ZESoundModule = ZEDSModule
 ZENetworkModule = ZEWinNetwork
 ZEPhysicsModule = ZEPhysXModule
 ZEGameModule = ZETestGame
+
+[Sound]
+DeviceId = 0
+StreamingDisabled = false
+MaxBufferSize = 2000
+MasterVolume = 1.000000
+SpeakerLayout = 1
+EffectVolume = 1.000000
+DialogVolume = 1.000000
+MusicVolume = 1.000000
+VideoVolume = 1.000000
+PlayerCommVolume = 1.000000
 
