--- a/Source/ZEModules/ZEDirect3D11/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D11/CMakeLists.txt
@@ -49,24 +49,22 @@ endif()
 
 ze_add_source(ZEExport.ZEDirect3D11.cpp					Sources)
 ze_add_source(ZEExport.ZEDirect3D11.h					Sources Headers)
-
+ze_add_source(ZED11Plugin.cpp							Sources)
+ze_add_source(ZED11Plugin.h								Sources)
 ze_add_source(ZED11Module.cpp							Sources)
 ze_add_source(ZED11Module.h								Sources ZEMC)
 ze_add_source(ZED11ComponentBase.cpp					Sources)
 ze_add_source(ZED11ComponentBase.h						Sources)
 ze_add_source(ZED11Context.cpp							Sources)
 ze_add_source(ZED11Context.h							Sources)
-
 ze_add_source(ZED11RenderTarget.cpp						Sources)
 ze_add_source(ZED11RenderTarget.h						Sources)
 ze_add_source(ZED11DepthStencilBuffer.cpp				Sources)
 ze_add_source(ZED11DepthStencilBuffer.h					Sources)
-
 ze_add_source(ZED11Tracer.cpp							Sources)
 ze_add_source(ZED11Tracer.h								Sources)
 ze_add_source(ZED11Adapter.cpp							Sources)
 ze_add_source(ZED11Adapter.h							Sources)
-
 ze_add_source(ZED11Shader.cpp							Sources)
 ze_add_source(ZED11Shader.h								Sources)
 ze_add_source(ZED11ShaderCompiler.cpp					Sources)
@@ -75,7 +73,6 @@ ze_add_source(ZED11ShaderMetaCompiler.cpp				Sources)
 ze_add_source(ZED11ShaderMetaCompiler.h					Sources)
 ze_add_source(ZED11ShaderCompilerIncludeInterface.cpp	Sources)
 ze_add_source(ZED11ShaderCompilerIncludeInterface.h		Sources)
-
 ze_add_source(ZED11StatePool.cpp						Sources)
 ze_add_source(ZED11State.h								Sources)
 ze_add_source(ZED11State.cpp							Sources)
@@ -83,10 +80,8 @@ ze_add_source(ZED11StatePool.h							Sources)
 ze_add_source(ZED11StatePool.cpp						Sources)
 ze_add_source(ZED11RenderStateData.h					Sources)
 ze_add_source(ZED11RenderStateData.cpp					Sources)
-
 ze_add_source(ZED11Output.h								Sources)
 ze_add_source(ZED11Output.cpp							Sources)
-
 ze_add_source(ZED11Sampler.cpp							Sources)
 ze_add_source(ZED11Sampler.h							Sources)
 ze_add_source(ZED11Buffer.cpp							Sources)
