CHG: Particle rendering has been improved. CHG: Particle simulation has been improved. IMP: Particle tiled rendering option has been implemented. IMP: Particle lighting has been implemented. FIX: Some bugs have been fixed.
svn path=/trunk/; revision=2352

--- a/Source/ZEEngine/ZEParticle/CMakeLists.txt
+++ b/Source/ZEEngine/ZEParticle/CMakeLists.txt
@@ -60,7 +60,8 @@ ze_add_source(ZEParticleColorOverLifeModifier.cpp		Sources)
 ze_add_source(ZEParticleColorOverLifeModifier.h			Sources Headers ZEMC)
 ze_add_source(ZEParticleRandomAccelerationModifier.cpp	Sources)
 ze_add_source(ZEParticleRandomAccelerationModifier.h	Sources Headers ZEMC)
-
+ze_add_source(ZEParticleConfineModifier.cpp				Sources)
+ze_add_source(ZEParticleConfineModifier.h				Sources Headers ZEMC)
 
 ze_add_library(TARGET ZEParticle 
 	ZEMC ${ZEMC}
